Fix student overflow bug

--- a/src/containers/StudentDashboard/StudentDashboard.scss
+++ b/src/containers/StudentDashboard/StudentDashboard.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   width: 45%;
-  height: 60vh;
+  height: 450px;
 }
 
 .article-container {
